--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+HELP.md
 # Compiled class file
 *.class
 
@@ -18,6 +19,10 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Netbeans
+nb-configuration.xml
+target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
