--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*HELP.md
+HELP.md
 # Compiled class file
 *.class
 
@@ -21,8 +21,8 @@
 *.rar
 
 # Netbeans
-*nb-configuration.xml
-*target
+nb-configuration.xml
+target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
