--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 HELP.md
 target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
 # Compiled class file
 *.class
@@ -23,6 +26,12 @@ target/
 *.rar
 
 # Netbeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
 nb-configuration.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
